Fixed code smells / Sonar Issues.